move citations around

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % This is just an example/guide for you to refer to when submitting manuscripts to Frontiers, it is not mandatory to use Frontiers .cls files nor frontiers.tex  %
-% This will only generate the Manuscript, the final article will be typeset by Frontiers after acceptance.   
+% This will only generate the Manuscript, the final article will be typeset by Frontiers after acceptance.
 %                                              %
 %                                                                                                                                                         %
 % When submitting your files, remember to upload this *tex file, the pdf generated with it, the *bib file (if bibliography is not within the *tex) and all the figures.
@@ -44,7 +44,7 @@ $^{2}$Ecology, Evolution, and Behavior Program, Michigan State University, East 
 $^{3}$Department of Computer Science and Engineering, Michigan State University, East Lansing, MI, USA \\
 $^{4}$Department of Biological Sciences, University of Idaho, Moscow, ID, USA
 % $^{X}$Laboratory X, Institute X, Department X, Organization X, City X , State XX (only USA, Canada and Australia), Country X \\
-% $^{Y}$Laboratory X, Institute X, Department X, Organization X, City X , State XX (only USA, Canada and Australia), Country X  
+% $^{Y}$Laboratory X, Institute X, Department X, Organization X, City X , State XX (only USA, Canada and Australia), Country X
 }
 % The Corresponding Author should be marked with an asterisk
 % Provide the exact contact address (this time including street name and city zip code) and email of the corresponding author
@@ -62,10 +62,10 @@ $^{4}$Department of Biological Sciences, University of Idaho, Moscow, ID, USA
 % - The evolution of adaptive phenotypic plasticity stabilizes populations in fluctuating environments
 % - Phenotypic plasticity can promote the evolution of complex features in fluctuating environments
 % - Adaptive plasticity buffers population against fluctuations, promoting novel trait evolution/retention
-% - Phenotypic plasticity can simultaneously slow rate of evolutionary change and promote evo of complex features 
+% - Phenotypic plasticity can simultaneously slow rate of evolutionary change and promote evo of complex features
 % - Phenotypic plasticity can promote the evolution and maintenance of complex features in fluctuating environments
 % - Adaptive plasticity stabilizes populations in fluctuating environments and constrains evolutionary outcomes
-\title[Adaptive plasticity stabilizes evolution]{Adaptive phenotypic plasticity stabilizes evolution in fluctuating environments} 
+\title[Adaptive plasticity stabilizes evolution]{Adaptive phenotypic plasticity stabilizes evolution in fluctuating environments}
 
 \author[\firstAuthorLast ]{\Authors} %This field will be automatically populated
 \address{} %This field will be automatically populated
@@ -106,7 +106,7 @@ $^{4}$Department of Biological Sciences, University of Idaho, Moscow, ID, USA
 
 \input{tex/acknowledgements}
 
-\bibliographystyle{frontiersinSCNS_ENG_HUMS} 
-\bibliography{references,software,ferguson}
+\bibliographystyle{frontiersinSCNS_ENG_HUMS}
+\bibliography{references,software}
 
 \end{document}
