fix paths in tex files

--- a/main.tex
+++ b/main.tex
@@ -77,34 +77,34 @@ $^{4}$Department of Biological Sciences, University of Idaho, Moscow, ID, USA
 
 \maketitle
 
-\input{tex/variables}
+\input{tex-variables}
 
-\input{tex/abstract}
+\input{tex-abstract}
 
 
 \begin{raggedbottom}
 
-\input{tex/introduction}
+\input{tex-introduction}
 
-\input{tex/methods}
+\input{tex-methods}
 
-\input{tex/results}
+\input{tex-results}
 
-\input{tex/discussion}
+\input{tex-discussion}
 
 \end{raggedbottom}
 
-\input{tex/supplemental-material}
+\input{tex-supplemental-material}
 
-\input{tex/data-availability}
+\input{tex-data-availability}
 
-\input{tex/author-contributions}
+\input{tex-author-contributions}
 
-\input{tex/funding}
+\input{tex-funding}
 
-\input{tex/conflict-of-interest}
+\input{tex-conflict-of-interest}
 
-\input{tex/acknowledgements}
+\input{tex-acknowledgements}
 
 \bibliographystyle{frontiersinSCNS_ENG_HUMS}
 \bibliography{references,software}
