--- a/tex-abstract.tex
+++ b/tex-abstract.tex
@@ -2,7 +2,7 @@
 
 % Flip narrative - lead with consequence, tease apart with dynamics/controls
 
-% Current problems: 
+% Current problems:
 % - not full picture of results (not specific enough)
 % - need to better place this work in context of existing work
 
@@ -20,15 +20,15 @@ Specifically, we examined the evolutionary histories of both plastic populations
 And (3), how does adaptive plasticity affect the potential for maladaptive alleles to accumulate in evolving genomes?
 We find that populations with adaptive phenotypic plasticity undergo less evolutionary change than non-plastic populations, which must rely on genetic variation from \textit{de novo} mutations to continuously readapt to environmental fluctuations.
 Indeed, the non-plastic populations undergo more frequent selective sweeps and accumulate many more genetic changes.
-We find that the repeated selective sweeps in non-plastic populations drive the loss of beneficial traits and accumulation of maladaptive alleles via deleterious hitchhiking, whereas phenotypic plasticity can stabilize populations against environmental fluctuations.  
-This stabilization allows plastic populations to more easily retain novel adaptive traits than their non-plastic counterparts. 
-In general, the evolution of adaptive phenotypic plasticity shifted evolutionary dynamics to be more similar to that of populations evolving in a static environment than to non-plastic populations evolving in an identical fluctuating environment. 
+We find that the repeated selective sweeps in non-plastic populations drive the loss of beneficial traits and accumulation of maladaptive alleles via deleterious hitchhiking, whereas phenotypic plasticity can stabilize populations against environmental fluctuations.
+This stabilization allows plastic populations to more easily retain novel adaptive traits than their non-plastic counterparts.
+In general, the evolution of adaptive phenotypic plasticity shifted evolutionary dynamics to be more similar to that of populations evolving in a static environment than to non-plastic populations evolving in an identical fluctuating environment.
 All natural environments subject populations to some form of change; our findings suggest that the stabilizing effect of phenotypic plasticity plays an important role in subsequent adaptive evolution.
 
 % [Indeed, the evolution of phenotypic plasticity shifted many dynamics to be more similar to populations evolving in a static environment than that of non-plastic populations evolving].
 
 % To our knowledge, this study is the first in-depth empirical investigation into how the \textit{de novo} evolution of adaptive plasticity shifts the course of subsequent evolution; we intend for this work to demonstrate the value of digital evolution in .....
 
-\input{tex/keywords}
+\input{tex-keywords}
 
 \end{abstract}
