first pass on incorporating reviewer suggestions

--- a/references.bib
+++ b/references.bib
@@ -1823,7 +1823,7 @@ Publisher: Wiley Online Library},
 	url = {https://www.biorxiv.org/content/10.1101/2020.08.25.267484v1},
 	doi = {10.1101/2020.08.25.267484},
 	abstract = {{\textless}p{\textgreater}Pleiotropic fitness trade-offs and their opposite, buttressing pleiotropy, underlie many important phenomena in ecology and evolution. Yet, predicting whether a population adapting to one ("home") environment will concomitantly gain or lose fitness in another ("non-home") environment remains challenging, especially when adaptive mutations have diverse pleiotropic effects. Here, we address this problem using the concept of the joint distribution of fitness effects (JDFE), a local measurable property of the fitness landscape. We derive simple statistics of the JDFE that predict the expected slope, variance and covariance of non-home fitness trajectories. We estimate these statistics from published data from the \textit{Escherichia coli} knock-out collection in the presence of antibiotics. We find that, for some drug pairs, the average trend towards collateral sensitivity may be masked by large uncertainty, even in the absence of epistasis. We provide simple theoretically grounded guidelines for designing robust sequential drug protocols.{\textless}/p{\textgreater}},
-	language = {en},
+	language = {english},
 	urldate = {2020-08-31},
 	journal = {bioRxiv},
 	author = {Ardell, Sarah M. and Kryazhimskiy, Sergey},
@@ -2013,3 +2013,32 @@ Section: New Results},
 	pages = {1--13},
 	file = {Full Text:/research/zotero/data/storage/PANYKRJE/Smith - 1990 - The evolution of prokaryotes does sex matter.pdf:application/pdf}
 }
+
+@incollection{west-eberhard_phenotypic_2008,
+	title = {Phenotypic {Plasticity}},
+	isbn = {978-0-08-045405-4},
+	language = {English},
+	booktitle = {Encyclopedia of Ecology},
+	publisher = {Elsevier},
+	author = {West-Eberhard, Mary Jane},
+	editor = {Jørgensen, Sven Erik and Fath, Brian D.},
+	year = {2008}
+}
+
+@article{misevic_experiments_2010,
+	title = {Experiments with {Digital} {Organisms} on the {Origin} and {Maintenance} of {Sex} in {Changing} {Environments}},
+	volume = {101},
+	issn = {0022-1503, 1465-7333},
+	url = {https://academic.oup.com/jhered/article-lookup/doi/10.1093/jhered/esq017},
+	doi = {10.1093/jhered/esq017},
+	language = {english},
+	number = {Supplement 1},
+	urldate = {2019-08-18},
+	journal = {Journal of Heredity},
+	author = {Misevic, D. and Ofria, C. and Lenski, R. E.},
+	month = mar,
+	year = {2010},
+	pages = {S46--S54}
+}
+
+
